[gd_scene load_steps=16 format=3 uid="uid://dp8c2dcm50e3h"]

[ext_resource type="TileSet" uid="uid://4wilkcph121u" path="res://resources/main_tileset.tres" id="1_uwuy8"]
[ext_resource type="PackedScene" uid="uid://ba2y6exjmtk6h" path="res://instances/player.tscn" id="2_e5pwf"]
[ext_resource type="PackedScene" uid="uid://xm6nelm810m1" path="res://instances/exit.tscn" id="3_rcf6c"]
[ext_resource type="Texture2D" uid="uid://bi8yog4fnc0bn" path="res://sprites/lady_luck.png" id="4_t8rk2"]
[ext_resource type="Script" path="res://scripts/LadyLuck.gd" id="5_falrw"]
[ext_resource type="Theme" uid="uid://c6kvh2v5r71lh" path="res://default_theme.tres" id="5_lp083"]
[ext_resource type="Resource" uid="uid://dnv3r0putf0i5" path="res://dialogue/intro_lady_luck.dialogue" id="6_8a1gi"]
[ext_resource type="Script" path="res://scripts/LadyLuckShop.gd" id="8_c0vml"]
[ext_resource type="Texture2D" uid="uid://cu53dqgxg65n6" path="res://sprites/souls.png" id="9_jjt1p"]
[ext_resource type="AudioStream" uid="uid://cxit0tuhsj0sc" path="res://sounds/dungeon_ambiance.mp3" id="10_2io4g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n1rt3"]
size = Vector2(64, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_xetax"]
radius = 49.6236

[sub_resource type="Animation" id="Animation_uxtmx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-98, -216)]
}

[sub_resource type="Animation" id="Animation_vhvvp"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-98, -216), Vector2(-98, -200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x5wql"]
_data = {
"RESET": SubResource("Animation_uxtmx"),
"float": SubResource("Animation_vhvvp")
}

[node name="Overworld" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("1_uwuy8")
format = 2
layer_0/tile_data = PackedInt32Array(-524300, 393217, 0, -458764, 262145, 0, -393228, 262145, 0, -327692, 4, 0, -262156, 4, 1, -196620, 4, 1, -131084, 4, 1, -65548, 4, 1, -12, 4, 1, 65524, 4, 1, 131060, 4, 1, 196596, 4, 1, 262132, 4, 1, 327668, 4, 1, 393204, 4, 1, 458740, 4, 1, 524276, 4, 1, 589812, 4, 1, -524299, 262145, 0, -458763, 262145, 0, -393227, 262145, 0, -327691, 4, 0, -262155, 4, 2, -196619, 4, 3, -131083, 4, 3, -65547, 4, 3, -11, 4, 4, 65525, 4, 1, 131061, 4, 1, 196597, 4, 1, 262133, 4, 1, 327669, 4, 1, 393205, 4, 1, 458741, 4, 1, 524277, 4, 1, 589813, 4, 1, -524298, 262145, 0, -458762, 262145, 0, -393226, 327681, 0, -327690, 4, 0, -262154, 65540, 2, -196618, 65540, 3, -131082, 65540, 3, -65546, 65540, 3, -10, 196612, 3, 65526, 4, 4, 131062, 4, 1, 196598, 4, 1, 262134, 4, 2, 327670, 4, 3, 393206, 4, 3, 458742, 4, 4, 524278, 4, 1, 589814, 4, 1, -524297, 393217, 0, -458761, 393217, 0, -393225, 262145, 0, -327689, 4, 0, -262153, 131076, 2, -196617, 196612, 2, -131081, 65540, 3, -65545, 65540, 3, -9, 65540, 3, 65527, 65540, 4, 131063, 4, 1, 196599, 4, 1, 262135, 65540, 2, 327671, 65540, 3, 393207, 65540, 3, 458743, 196612, 3, 524279, 4, 4, 589815, 4, 1, -524296, 262145, 0, -458760, 262145, 0, -393224, 393217, 0, -327688, 4, 0, -262152, 4, 1, -196616, 65540, 2, -131080, 65540, 3, -65544, 65540, 3, -8, 65540, 3, 65528, 65540, 4, 131064, 4, 1, 196600, 4, 1, 262136, 131076, 2, 327672, 196612, 2, 393208, 65540, 3, 458744, 65540, 3, 524280, 65540, 4, 589816, 4, 1, -524295, 262145, 0, -458759, 262145, 0, -393223, 393217, 0, -327687, 4, 0, -262151, 4, 1, -196615, 131076, 2, -131079, 131076, 3, -65543, 131076, 3, -7, 131076, 3, 65529, 131076, 4, 131065, 4, 1, 196601, 4, 1, 262137, 4, 1, 327673, 131076, 2, 393209, 196612, 2, 458745, 65540, 3, 524281, 65540, 4, 589817, 4, 1, -524294, 262145, 0, -458758, 327681, 0, -393222, 262145, 0, -327686, 4, 0, -262150, 4, 1, -196614, 4, 1, -131078, 4, 1, -65542, 4, 1, -6, 4, 1, 65530, 4, 1, 131066, 4, 1, 196602, 4, 1, 262138, 4, 1, 327674, 4, 1, 393210, 131076, 2, 458746, 131076, 3, 524282, 131076, 4, 589818, 4, 1, -524293, 262145, 0, -458757, 393217, 0, -393221, 393217, 0, -327685, 4, 0, -262149, 4, 1, -196613, 4, 1, -131077, 4, 1, -65541, 4, 1, -5, 4, 1, 65531, 4, 1, 131067, 4, 1, 196603, 4, 1, 262139, 4, 1, 327675, 4, 1, 393211, 4, 1, 458747, 4, 1, 524283, 4, 2, 589819, 4, 3, -524292, 393217, 0, -458756, 262145, 0, -393220, 262145, 0, -327684, 4, 0, -262148, 4, 1, -196612, 4, 1, -131076, 4, 1, -65540, 4, 1, -4, 4, 1, 65532, 4, 1, 131068, 4, 1, 196604, 4, 1, 262140, 4, 1, 327676, 4, 1, 393212, 4, 1, 458748, 4, 2, 524284, 196612, 4, 589820, 65540, 3, -524291, 262145, 0, -458755, 327681, 0, -393219, 327681, 0, -327683, 65540, 0, -262147, 4, 3, -196611, 4, 3, -131075, 4, 3, -65539, 4, 4, -3, 4, 1, 65533, 4, 1, 131069, 4, 1, 196605, 4, 1, 262141, 4, 1, 327677, 4, 2, 393213, 4, 3, 458749, 196612, 4, 524285, 65540, 3, 589821, 65540, 3, -524290, 262145, 0, -458754, 393217, 0, -393218, 262145, 0, -327682, 196612, 0, -262146, 65540, 3, -196610, 65540, 3, -131074, 65540, 3, -65538, 196612, 3, -2, 4, 3, 65534, 4, 3, 131070, 4, 1, 196606, 4, 1, 262142, 4, 1, 327678, 196612, 4, 393214, 65540, 3, 458750, 65540, 3, 524286, 65540, 3, 589822, 196612, 1, -524289, 262145, 0, -458753, 262145, 0, -393217, 393217, 0, -327681, 196612, 0, -1, 65540, 3, 65535, 65540, 3, 131071, 196612, 3, 196607, 4, 3, 262143, 196612, 4, 327679, 65540, 3, 393215, 65540, 3, 458751, 65540, 3, 524287, 196612, 1, 589823, 131076, 4, -524288, 262145, 0, -458752, 393217, 0, -393216, 196612, 0, -65536, 65540, 3, 0, 65540, 3, 65536, 65540, 3, 131072, 65540, 3, 196608, 65540, 3, 262144, 65540, 3, 327680, 65540, 3, 393216, 196612, 1, 458752, 131076, 4, 524288, 4, 1, -589823, 327681, 0, -524287, 327681, 0, -458751, 262145, 0, -393215, 196612, 0, -327679, 65540, 3, -262143, 65540, 3, -196607, 196612, 1, -131071, 131076, 3, -65535, 196612, 2, 1, 65540, 3, 65537, 65540, 3, 131073, 65540, 3, 196609, 65540, 3, 262145, 65540, 3, 327681, 196612, 1, 393217, 131076, 4, 458753, 4, 1, 524289, 4, 1, -589822, 327681, 0, -524286, 262145, 0, -458750, 393217, 0, -393214, 196612, 0, -327678, 65540, 3, -262142, 196612, 1, -196606, 131076, 4, -131070, 4, 1, -65534, 131076, 2, 2, 131076, 3, 65538, 131076, 3, 131074, 131076, 3, 196610, 131076, 3, 262146, 131076, 3, 327682, 131076, 4, 393218, 4, 1, 458754, 4, 1, 524290, 4, 1, -589821, 393217, 0, -524285, 393217, 0, -458749, 262145, 0, -393213, 131076, 0, -327677, 131076, 3, -262141, 131076, 4, -196605, 4, 1, -131069, 4, 1, -65533, 4, 1, 3, 4, 1, 65539, 4, 1, 131075, 4, 1, 196611, 4, 1, 262147, 4, 1, 327683, 4, 1, 393219, 4, 1, 458755, 4, 1, 524291, 4, 1, -589820, 262145, 0, -524284, 327681, 0, -458748, 393217, 0, -393212, 4, 0, -327676, 4, 1, -262140, 4, 1, -196604, 4, 1, -131068, 4, 1, -65532, 4, 1, 4, 4, 1, 65540, 4, 1, 131076, 4, 1, 196612, 4, 1, 262148, 4, 1, 327684, 4, 1, 393220, 4, 1, 458756, 4, 1, 524292, 4, 1, -589819, 262145, 0, -524283, 262145, 0, -458747, 262145, 0, -393211, 65540, 0, -327675, 4, 4, -262139, 4, 1, -196603, 4, 1, -131067, 4, 1, -65531, 4, 1, 5, 4, 1, 65541, 4, 1, 131077, 4, 1, 196613, 4, 1, 262149, 4, 1, 327685, 4, 1, 393221, 4, 1, 458757, 4, 1, 524293, 4, 1, -589818, 262145, 0, -524282, 262145, 0, -458746, 393217, 0, -393210, 196612, 0, -327674, 196612, 3, -262138, 4, 4, -196602, 4, 1, -131066, 4, 1, -65530, 4, 1, 6, 4, 1, 65542, 4, 3, 131078, 4, 3, 196614, 4, 3, 262150, 4, 4, 327686, 4, 1, 393222, 4, 1, 458758, 4, 1, 524294, 4, 1, -589817, 262145, 0, -524281, 393217, 0, -458745, 327681, 0, -393209, 196612, 0, -327673, 65540, 3, -262137, 196612, 3, -196601, 4, 4, -131065, 4, 1, -65529, 4, 1, 7, 65540, 2, 65543, 65540, 3, 131079, 65540, 3, 196615, 65540, 3, 262151, 65540, 4, 327687, 4, 1, 393223, 4, 1, 458759, 4, 1, 524295, 4, 1, -589816, 262145, 0, -524280, 262145, 0, -458744, 262145, 0, -393208, 196612, 0, -327672, 65540, 3, -262136, 65540, 3, -196600, 65540, 4, -131064, 4, 1, -65528, 4, 1, 8, 65540, 2, 65544, 65540, 3, 131080, 65540, 3, 196616, 196612, 1, 262152, 131076, 4, 327688, 4, 1, 393224, 4, 1, 458760, 4, 1, 524296, 4, 1, -589815, 327681, 0, -524279, 262145, 0, -458743, 393217, 0, -393207, 196612, 0, -327671, 65540, 3, -262135, 65540, 3, -196599, 196612, 3, -131063, 4, 4, -65527, 4, 1, 9, 65540, 2, 65545, 65540, 3, 131081, 196612, 1, 196617, 131076, 4, 262153, 4, 1, 327689, 4, 1, 393225, 4, 1, 458761, 4, 1, 524297, 4, 1, -589814, 262145, 0, -524278, 327681, 0, -458742, 327681, 0, -393206, 196612, 0, -327670, 65540, 3, -262134, 65540, 3, -196598, 65540, 3, -131062, 65540, 4, -65526, 4, 1, 10, 131076, 2, 65546, 131076, 3, 131082, 131076, 4, 196618, 4, 1, 262154, 4, 1, 327690, 4, 1, 393226, 4, 1, 458762, 4, 1, 524298, 4, 1, -589813, 327681, 0, -524277, 262145, 0, -458741, 262145, 0, -393205, 196612, 0, -327669, 65540, 3, -262133, 65540, 3, -196597, 65540, 3, -131061, 65540, 4, -65525, 4, 1, 11, 4, 1, 65547, 4, 1, 131083, 4, 1, 196619, 4, 1, 262155, 4, 1, 327691, 4, 1, 393227, 4, 1, 458763, 4, 1, 524299, 4, 1, -524301, 131075, 1, -458765, 131075, 1, -393229, 131075, 1, -327693, 131075, 1, -262157, 131075, 1, -196621, 131075, 1, -131085, 131075, 1, -65549, 131075, 1, -13, 131075, 1, 65523, 131075, 1, 131059, 131075, 1, 196595, 131075, 1, 262131, 131075, 1, 327667, 131075, 1, 393203, 131075, 1, 458739, 131075, 1, 524275, 131075, 1, 589811, 131075, 1, 655347, 262147, 1, 655348, 65539, 0, 655349, 65539, 0, 655350, 65539, 0, 655351, 65539, 0, 655352, 65539, 0, 655353, 65539, 0, 655354, 65539, 0, 655355, 65539, 0, 655356, 65539, 0, 655357, 65539, 0, 655358, 65539, 0, 655359, 65539, 0, 589824, 65539, 0, 589825, 65539, 0, 589826, 65539, 0, 589827, 65539, 0, 589828, 65539, 0, 589829, 65539, 0, 589830, 65539, 0, 589831, 65539, 0, 589832, 65539, 0, 589833, 65539, 0, 589834, 65539, 0, 589835, 65539, 0, 589836, 327683, 1, -655348, 3, 1, -589812, 3, 1, -524276, 3, 1, -458740, 3, 1, -393204, 3, 1, -327668, 3, 1, -262132, 3, 1, -196596, 3, 1, -131060, 3, 1, -65524, 3, 1, 12, 3, 1, 65548, 3, 1, 131084, 3, 1, 196620, 3, 1, 262156, 3, 1, 327692, 3, 1, 393228, 3, 1, 458764, 3, 1, 524300, 3, 1, -589837, 131075, 1, -589836, 65539, 14, -589835, 65539, 23, -589834, 65539, 17, -589833, 65539, 20, -589832, 65539, 20, -589831, 65539, 23, -589830, 65539, 14, -589829, 65539, 14, -589828, 65539, 14, -589827, 65539, 14, -589826, 131075, 23, -589825, 262145, 0, -655360, 327681, 0, -655359, 3, 20, -655358, 65539, 20, -655357, 65539, 17, -655356, 65539, 14, -655355, 65539, 23, -655354, 65539, 14, -655353, 65539, 14, -655352, 65539, 14, -655351, 65539, 14, -655350, 65539, 23, -655349, 65539, 14, -1376269, 0, 0, -1310733, 0, 0, -1245197, 0, 0, -1179661, 0, 0, -1114125, 0, 0, -1048589, 0, 0, -983053, 0, 0, -917517, 0, 0, -851981, 0, 0, -786445, 0, 0, -720909, 0, 0, -655373, 0, 0, -1376268, 0, 0, -1310732, 0, 0, -1245196, 0, 0, -1179660, 0, 0, -1114124, 0, 0, -1048588, 0, 0, -983052, 0, 0, -917516, 0, 0, -851980, 0, 0, -786444, 0, 0, -720908, 0, 0, -655372, 0, 0, -1376267, 0, 0, -1310731, 0, 0, -1245195, 0, 0, -1179659, 0, 0, -1114123, 0, 0, -1048587, 0, 0, -983051, 0, 0, -917515, 0, 0, -851979, 0, 0, -786443, 0, 0, -720907, 0, 0, -655371, 0, 0, -1376266, 0, 0, -1310730, 0, 0, -1245194, 0, 0, -1179658, 0, 0, -1114122, 0, 0, -1048586, 0, 0, -983050, 0, 0, -917514, 0, 0, -851978, 0, 0, -786442, 0, 0, -720906, 0, 0, -655370, 0, 0, -1376265, 0, 0, -1310729, 0, 0, -1245193, 0, 0, -1179657, 0, 0, -1114121, 0, 0, -1048585, 0, 0, -983049, 0, 0, -917513, 0, 0, -851977, 0, 0, -786441, 0, 0, -720905, 0, 0, -655369, 0, 0, -1376264, 0, 0, -1310728, 0, 0, -1245192, 0, 0, -1179656, 0, 0, -1114120, 0, 0, -1048584, 0, 0, -983048, 0, 0, -917512, 0, 0, -851976, 0, 0, -786440, 0, 0, -720904, 0, 0, -655368, 0, 0, -1376263, 0, 0, -1310727, 0, 0, -1245191, 0, 0, -1179655, 0, 0, -1114119, 0, 0, -1048583, 0, 0, -983047, 0, 0, -917511, 0, 0, -851975, 0, 0, -786439, 0, 0, -720903, 0, 0, -655367, 0, 0, -1376262, 0, 0, -1310726, 0, 0, -1245190, 0, 0, -1179654, 0, 0, -1114118, 0, 0, -1048582, 0, 0, -983046, 0, 0, -917510, 0, 0, -851974, 0, 0, -786438, 0, 0, -720902, 0, 0, -655366, 0, 0, -1376261, 0, 0, -1310725, 0, 0, -1245189, 0, 0, -1179653, 0, 0, -1114117, 0, 0, -1048581, 0, 0, -983045, 0, 0, -917509, 0, 0, -851973, 0, 0, -786437, 0, 0, -720901, 0, 0, -655365, 0, 0, -1376260, 0, 0, -1310724, 0, 0, -1245188, 0, 0, -1179652, 0, 0, -1114116, 0, 0, -1048580, 0, 0, -983044, 0, 0, -917508, 0, 0, -851972, 0, 0, -786436, 0, 0, -720900, 0, 0, -655364, 0, 0, -1376259, 0, 0, -1310723, 0, 0, -1245187, 0, 0, -1179651, 0, 0, -1114115, 0, 0, -1048579, 0, 0, -983043, 0, 0, -917507, 0, 0, -851971, 0, 0, -786435, 0, 0, -720899, 0, 0, -655363, 0, 0, -1376258, 131075, 1, -1310722, 131075, 1, -1245186, 131075, 1, -1179650, 131075, 1, -1114114, 131075, 1, -1048578, 131075, 1, -983042, 131075, 1, -917506, 131075, 1, -851970, 131075, 1, -786434, 131075, 1, -720898, 131075, 1, -655362, 131075, 1, -1376257, 262145, 0, -1310721, 262145, 0, -1245185, 262145, 0, -1179649, 262145, 0, -1114113, 393217, 0, -1048577, 393217, 0, -983041, 393217, 0, -917505, 262145, 0, -851969, 262145, 0, -786433, 327681, 0, -720897, 327681, 0, -655361, 262145, 0, -1441792, 262145, 0, -1376256, 262145, 0, -1310720, 327681, 0, -1245184, 262145, 0, -1179648, 393217, 0, -1114112, 393217, 0, -1048576, 262145, 0, -983040, 262145, 0, -917504, 393217, 0, -851968, 393217, 0, -786432, 262145, 0, -720896, 262145, 0, -1441791, 3, 1, -1376255, 3, 1, -1310719, 3, 1, -1245183, 3, 1, -1179647, 3, 1, -1114111, 3, 1, -1048575, 3, 1, -983039, 3, 1, -917503, 3, 1, -851967, 3, 1, -786431, 3, 1, -720895, 3, 1, -1441790, 0, 0, -1376254, 0, 0, -1310718, 0, 0, -1245182, 0, 0, -1179646, 0, 0, -1114110, 0, 0, -1048574, 0, 0, -983038, 0, 0, -917502, 0, 0, -851966, 0, 0, -786430, 0, 0, -720894, 0, 0, -1441789, 0, 0, -1376253, 0, 0, -1310717, 0, 0, -1245181, 0, 0, -1179645, 0, 0, -1114109, 0, 0, -1048573, 0, 0, -983037, 0, 0, -917501, 0, 0, -851965, 0, 0, -786429, 0, 0, -720893, 0, 0, -1441788, 0, 0, -1376252, 0, 0, -1310716, 0, 0, -1245180, 0, 0, -1179644, 0, 0, -1114108, 0, 0, -1048572, 0, 0, -983036, 0, 0, -917500, 0, 0, -851964, 0, 0, -786428, 0, 0, -720892, 0, 0, -1441787, 0, 0, -1376251, 0, 0, -1310715, 0, 0, -1245179, 0, 0, -1179643, 0, 0, -1114107, 0, 0, -1048571, 0, 0, -983035, 0, 0, -917499, 0, 0, -851963, 0, 0, -786427, 0, 0, -720891, 0, 0, -1441786, 0, 0, -1376250, 0, 0, -1310714, 0, 0, -1245178, 0, 0, -1179642, 0, 0, -1114106, 0, 0, -1048570, 0, 0, -983034, 0, 0, -917498, 0, 0, -851962, 0, 0, -786426, 0, 0, -720890, 0, 0, -1441785, 0, 0, -1376249, 0, 0, -1310713, 0, 0, -1245177, 0, 0, -1179641, 0, 0, -1114105, 0, 0, -1048569, 0, 0, -983033, 0, 0, -917497, 0, 0, -851961, 0, 0, -786425, 0, 0, -720889, 0, 0, -1441784, 0, 0, -1376248, 0, 0, -1310712, 0, 0, -1245176, 0, 0, -1179640, 0, 0, -1114104, 0, 0, -1048568, 0, 0, -983032, 0, 0, -917496, 0, 0, -851960, 0, 0, -786424, 0, 0, -720888, 0, 0, -1441783, 0, 0, -1376247, 0, 0, -1310711, 0, 0, -1245175, 0, 0, -1179639, 0, 0, -1114103, 0, 0, -1048567, 0, 0, -983031, 0, 0, -917495, 0, 0, -851959, 0, 0, -786423, 0, 0, -720887, 0, 0, -1441782, 0, 0, -1376246, 0, 0, -1310710, 0, 0, -1245174, 0, 0, -1179638, 0, 0, -1114102, 0, 0, -1048566, 0, 0, -983030, 0, 0, -917494, 0, 0, -851958, 0, 0, -786422, 0, 0, -720886, 0, 0, -1441781, 0, 0, -1376245, 0, 0, -1310709, 0, 0, -1245173, 0, 0, -1179637, 0, 0, -1114101, 0, 0, -1048565, 0, 0, -983029, 0, 0, -917493, 0, 0, -851957, 0, 0, -786421, 0, 0, -720885, 0, 0, -1441780, 0, 0, -1376244, 0, 0, -1310708, 0, 0, -1245172, 0, 0, -1179636, 0, 0, -1114100, 0, 0, -1048564, 0, 0, -983028, 0, 0, -917492, 0, 0, -851956, 0, 0, -786420, 0, 0, -720884, 0, 0, -589824, 327681, 0, -262145, 65540, 3, -196609, 65540, 3, -131073, 65540, 3, -65537, 65540, 3, -327680, 65540, 3, -262144, 65540, 3, -196608, 65540, 3, -131072, 65540, 3)

[node name="Player" parent="." instance=ExtResource("2_e5pwf")]
position = Vector2(0, -19)

[node name="Exit" parent="." instance=ExtResource("3_rcf6c")]
position = Vector2(0, -320)
next_scene = "res://levels/level_one.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Exit"]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_n1rt3")

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.384314, 0.384314, 0.384314, 1)

[node name="LadyLuck" type="Sprite2D" parent="."]
position = Vector2(-98, -216)
scale = Vector2(2, 2)
texture = ExtResource("4_t8rk2")
script = ExtResource("5_falrw")
dialogue = ExtResource("6_8a1gi")

[node name="Label" type="Label" parent="LadyLuck"]
offset_left = -5.0
offset_top = -39.5
offset_right = 7.0
offset_bottom = -10.5
theme = ExtResource("5_lp083")
theme_override_font_sizes/font_size = 32
text = "E"

[node name="PlayerDetector" type="Area2D" parent="LadyLuck"]
visible = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LadyLuck/PlayerDetector"]
shape = SubResource("CircleShape2D_xetax")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LadyLuck"]
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_x5wql")
}

[node name="LadyLuckShop" type="CanvasLayer" parent="LadyLuck"]
visible = false
script = ExtResource("8_c0vml")

[node name="ColorRect" type="ColorRect" parent="LadyLuck/LadyLuckShop"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.811765)

[node name="UnlockWeaponLootRoomButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 448.0
offset_bottom = 320.0
theme = ExtResource("5_lp083")
text = "Unlock Weapon Loot Room"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockWeaponLootRoomButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockWeaponLootRoomButton/Cost"]
offset_left = 136.0
offset_top = 64.0
offset_right = 176.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockWeaponLootRoomButton/Cost"]
position = Vector2(184, 80)
texture = ExtResource("9_jjt1p")

[node name="UnlockShopkeeperRoomButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 128.0
offset_top = 384.0
offset_right = 448.0
offset_bottom = 448.0
theme = ExtResource("5_lp083")
text = "Unlock Shopkeeper Room"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockShopkeeperRoomButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockShopkeeperRoomButton/Cost"]
offset_left = 136.0
offset_top = 64.0
offset_right = 176.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "150"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/UnlockShopkeeperRoomButton/Cost"]
position = Vector2(184, 80)
texture = ExtResource("9_jjt1p")

[node name="IncreaseStartingCoinsButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 896.0
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 320.0
theme = ExtResource("5_lp083")
text = "+100 starting coins"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingCoinsButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingCoinsButton/Cost"]
offset_left = 96.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingCoinsButton/Cost"]
position = Vector2(144, 80)
texture = ExtResource("9_jjt1p")

[node name="IncreasePotionButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 544.0
offset_top = 256.0
offset_right = 800.0
offset_bottom = 320.0
theme = ExtResource("5_lp083")
text = "+1 health potion"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreasePotionButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/IncreasePotionButton/Cost"]
offset_left = 96.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreasePotionButton/Cost"]
position = Vector2(144, 80)
texture = ExtResource("9_jjt1p")

[node name="IncreaseDashButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 544.0
offset_top = 384.0
offset_right = 800.0
offset_bottom = 448.0
theme = ExtResource("5_lp083")
text = "+1 dash"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseDashButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseDashButton/Cost"]
offset_left = 96.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "10"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseDashButton/Cost"]
position = Vector2(144, 80)
texture = ExtResource("9_jjt1p")

[node name="InceaseSoulDropButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 896.0
offset_top = 384.0
offset_right = 1152.0
offset_bottom = 448.0
theme = ExtResource("5_lp083")
text = "+5% to drop soul"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/InceaseSoulDropButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/InceaseSoulDropButton/Cost"]
offset_left = 96.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "15"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/InceaseSoulDropButton/Cost"]
position = Vector2(144, 80)
texture = ExtResource("9_jjt1p")

[node name="IncreaseStartingHealthButton" type="Button" parent="LadyLuck/LadyLuckShop/ColorRect"]
layout_mode = 0
offset_left = 896.0
offset_top = 512.0
offset_right = 1152.0
offset_bottom = 576.0
theme = ExtResource("5_lp083")
text = "+10 starting health"

[node name="Cost" type="Node2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingHealthButton"]

[node name="Label" type="Label" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingHealthButton/Cost"]
offset_left = 96.0
offset_top = 64.0
offset_right = 136.0
offset_bottom = 93.0
theme = ExtResource("5_lp083")
text = "20"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingHealthButton/Cost"]
position = Vector2(144, 80)
texture = ExtResource("9_jjt1p")

[node name="Ambiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_2io4g")
autoplay = true

[connection signal="body_entered" from="LadyLuck/PlayerDetector" to="LadyLuck" method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="LadyLuck/PlayerDetector" to="LadyLuck" method="_on_player_detector_body_exited"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/UnlockWeaponLootRoomButton" to="LadyLuck/LadyLuckShop" method="_on_unlock_weapon_loot_room_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/UnlockShopkeeperRoomButton" to="LadyLuck/LadyLuckShop" method="_on_unlock_shopkeeper_room_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingCoinsButton" to="LadyLuck/LadyLuckShop" method="_on_increase_starting_coins_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/IncreasePotionButton" to="LadyLuck/LadyLuckShop" method="_on_increase_potion_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/IncreaseDashButton" to="LadyLuck/LadyLuckShop" method="_on_increase_dash_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/InceaseSoulDropButton" to="LadyLuck/LadyLuckShop" method="_on_incease_soul_drop_button_pressed"]
[connection signal="pressed" from="LadyLuck/LadyLuckShop/ColorRect/IncreaseStartingHealthButton" to="LadyLuck/LadyLuckShop" method="_on_increase_starting_health_button_pressed"]
